[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/UserInterface/StatsMenu/StatsMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UserInterface/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://src/UserInterface/PagesMenu/PagesMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UserInterface/WeaponsMenu/WeaponsMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UserInterface/SystemMenu/SystemMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UserInterface/MaterialsMenu/MaterialsMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/UserInterface/SpellsMenu/SpellsMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/UserInterface/CraftingMenu/CraftingMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/theme/user_interface.tres" type="Theme" id=9]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 9 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.529412 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsMenu" parent="." instance=ExtResource( 1 )]

[node name="SpellsMenu" parent="." instance=ExtResource( 7 )]

[node name="PagesMenu" parent="." instance=ExtResource( 3 )]

[node name="WeaponsMenu" parent="." instance=ExtResource( 4 )]

[node name="MaterialsMenu" parent="." instance=ExtResource( 6 )]

[node name="CraftingMenu" parent="." instance=ExtResource( 8 )]

[node name="SystemMenu" parent="." instance=ExtResource( 5 )]
margin_left = 1.16632
margin_top = -0.857376
margin_right = 1.16632
margin_bottom = -0.857361

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.06
anchor_top = 0.04
anchor_right = 0.94
anchor_bottom = 0.125
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsButton" type="Button" parent="HBoxContainer"]
margin_right = 97.0
margin_bottom = 38.0
size_flags_horizontal = 3
text = "Stats"

[node name="SpellsButton" type="Button" parent="HBoxContainer"]
margin_left = 101.0
margin_right = 198.0
margin_bottom = 38.0
size_flags_horizontal = 3
text = "Spells"

[node name="PagesButton" type="Button" parent="HBoxContainer"]
margin_left = 202.0
margin_right = 299.0
margin_bottom = 38.0
size_flags_horizontal = 3
text = "Pages"

[node name="WeaponsButton" type="Button" parent="HBoxContainer"]
margin_left = 303.0
margin_right = 400.0
margin_bottom = 38.0
size_flags_horizontal = 3
text = "Weapons"

[node name="MaterialsButton" type="Button" parent="HBoxContainer"]
margin_left = 404.0
margin_right = 501.0
margin_bottom = 38.0
size_flags_horizontal = 3
text = "Materials"

[node name="CraftingButton" type="Button" parent="HBoxContainer"]
margin_left = 505.0
margin_right = 602.0
margin_bottom = 38.0
size_flags_horizontal = 3
text = "Crafting"

[node name="SystemButton" type="Button" parent="HBoxContainer"]
margin_left = 606.0
margin_right = 704.0
margin_bottom = 38.0
size_flags_horizontal = 3
text = "System"

[node name="GoRight" type="Button" parent="."]
anchor_left = 0.95
anchor_top = 0.055
anchor_right = 0.955
anchor_bottom = 0.07
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
enabled_focus_mode = 0
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoLeft" type="Button" parent="."]
anchor_left = 0.043
anchor_top = 0.055
anchor_right = 0.05
anchor_bottom = 0.071
margin_left = -18.4
margin_top = -1.90735e-06
margin_bottom = 19.52
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
enabled_focus_mode = 0
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="HBoxContainer/StatsButton" to="." method="_on_StatsButton_pressed"]
[connection signal="pressed" from="HBoxContainer/StatsButton" to="." method="_on_StatsButton_pressed"]
[connection signal="focus_entered" from="HBoxContainer/SpellsButton" to="." method="_on_SpellsButton_pressed"]
[connection signal="pressed" from="HBoxContainer/SpellsButton" to="." method="_on_SpellsButton_pressed"]
[connection signal="focus_entered" from="HBoxContainer/PagesButton" to="." method="_on_PagesButton_pressed"]
[connection signal="pressed" from="HBoxContainer/PagesButton" to="." method="_on_PagesButton_pressed"]
[connection signal="pressed" from="HBoxContainer/WeaponsButton" to="." method="_on_WeaponsButton_pressed"]
[connection signal="focus_entered" from="HBoxContainer/MaterialsButton" to="." method="_on_MaterialsButton_pressed"]
[connection signal="pressed" from="HBoxContainer/MaterialsButton" to="." method="_on_MaterialsButton_pressed"]
[connection signal="focus_entered" from="HBoxContainer/CraftingButton" to="." method="_on_CraftingButton_pressed"]
[connection signal="pressed" from="HBoxContainer/CraftingButton" to="." method="_on_CraftingButton_pressed"]
[connection signal="focus_entered" from="HBoxContainer/SystemButton" to="." method="_on_SystemButton_pressed"]
[connection signal="pressed" from="HBoxContainer/SystemButton" to="." method="_on_SystemButton_pressed"]
[connection signal="focus_entered" from="GoRight" to="." method="_on_GoRight_pressed"]
[connection signal="pressed" from="GoRight" to="." method="_on_GoRight_pressed"]
[connection signal="focus_entered" from="GoLeft" to="." method="_on_GoLeft_pressed"]
[connection signal="pressed" from="GoLeft" to="." method="_on_GoLeft_pressed"]
